# watchtower

./: .gitignore  ARCHITECTURE_ISSUES.md  CHANGELOG.md  Cargo.toml  DEBUG_LOGGING.md  Makefile  README.docker.md  README.md  docker-compose.yml
assets/: ATTRIBUTION.md
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: backpressure.rs  circuit_breaker.rs  config.rs  errors.rs  event.rs  handler.rs  lib.rs  prelude.rs  subscriber.rs  transport.rs
docker/: Dockerfile.webhook  Dockerfile.websocket
docker/webhook-receiver/: Cargo.toml
docker/webhook-receiver/src/: main.rs
docker/websocket-server/: Cargo.toml
docker/websocket-server/src/: main.rs
docs/: ARCHITECTURE.md  FAULT_TOLERANCE.md  README.md
examples/: README.md  backpressure.rs  circuit_breaker.rs  derive_macro.rs  error_handling_dlq.rs  multi_transport.rs  nats_pubsub.rs  prelude_usage.rs  rabbitmq_dlx.rs  redis_streams.rs  webhook_signatures.rs  websocket_bidirectional.rs
examples/websocket-server/: Cargo.toml  main.rs
src/: lib.rs  prelude.rs
tests/: README.md  nats_integration.rs  rabbitmq_integration.rs  redis_integration.rs  webhook_integration.rs  websocket_integration.rs
transport/nats/: Cargo.toml  README.md
transport/nats/src/: client.rs  config.rs  lib.rs  prelude.rs  subscriber.rs
transport/rabbitmq/: Cargo.toml  README.md
transport/rabbitmq/src/: config.rs  lib.rs  prelude.rs  subscriber.rs  transport.rs
transport/redis/: Cargo.toml  README.md
transport/redis/src/: config.rs  lib.rs  prelude.rs  subscriber.rs  transport.rs
transport/webhook/: Cargo.toml  README.md
transport/webhook/src/: client.rs  config.rs  lib.rs  prelude.rs  subscriber.rs
transport/websocket/: Cargo.toml  README.md
transport/websocket-server/: Cargo.toml
transport/websocket-server/src/: config.rs  connection.rs  handlers.rs  lib.rs  prelude.rs  transport.rs
transport/websocket/src/: config.rs  lib.rs  prelude.rs  subscriber.rs  transport.rs
unified/: Cargo.toml
unified/src/: lib.rs
watchtower-derive/: Cargo.toml  README.md
watchtower-derive/src/: lib.rs
