[package]
name = "watchtower-unified"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-logging = [
    "watchtower-core/debug-logging",
    "watchtower-webhook/debug-logging",
    "watchtower-nats/debug-logging",
    "watchtower-redis/debug-logging",
    "watchtower-rabbitmq/debug-logging",
    "watchtower-websocket/debug-logging",
]

[dependencies]
watchtower-core = { path = "../core" }
watchtower-config = { path = "../config" }
watchtower-webhook = { path = "../transport/webhook" }
watchtower-nats = { path = "../transport/nats" }
watchtower-redis = { path = "../transport/redis" }
watchtower-rabbitmq = { path = "../transport/rabbitmq" }
watchtower-websocket = { path = "../transport/websocket" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
