[package]
name = "watchtower-nats"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-logging = []

[dependencies]
watchtower-core = { path = "../../core" }
watchtower-config = { path = "../../config" }
async-trait = "0.1"
async-nats = "0.37"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
