[package]
name = "watchtower-rabbitmq"
version = "0.1.0"
edition = "2024"

[dependencies]
watchtower-core = { path = "../../core" }
lapin = "2.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
