[package]
name = "watchtower-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
watchtower-core = { path = "../../core" }
watchtower-config = { path = "../../config" }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
