[package]
name = "watchtower-webhook"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-logging = []

[dependencies]
watchtower-core = { path = "../../core" }
watchtower-config = { path = "../../config" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
