[package]
name = "watchtower-websocket-server"
version = "0.1.0"
edition = "2024"
description = "WebSocket server transport for Watchtower"
license = "MIT"

[features]
default = []
debug-logging = []

[dependencies]
watchtower-core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
chrono = "0.4"