[package]
name = "watchtower-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
watchtower-core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
